# agentic-coding

./: .gitignore  README.md  pyproject.toml  requirements.txt
project_user-authentication-system_FE/: CLAUDE.md  README.md  package.json
project_user-authentication-system_FE/src/: App.tsx
project_user-authentication-system_FE/src/store/: store.ts
sample-project_FE/: README.md  package.json
shopping_site_FE/: CLAUDE.md  README.md  package.json
shopping_site_FE/src/: App.tsx
simple_timer_FE/: CLAUDE.md  README.md
src/: client.py  logging_config.py  main.py
src/agents/: __init__.py  architect_agent_graph.py  graph.py  resolver_agent_graph.py
src/callbacks/: logging_callback_handler.py
src/constants/: __init__.py  aws_model.py
src/core/: config.py
src/docker/: Dockerfile
src/models/: schemas.py
src/prebuilt/: __init__.py  custom_tool_node.py
src/prompts/: __init__.py  architect_agent_prompts.py  backend_architect_agent_prompts.py  base_prompts.py  conflict_prompts.py  dev_env_init_prompts.py  dev_planning_prompts.py  frontend_architect_agent_prompts.py  req_def_prompts.py  resolver_prompts.py  role_allocate_prompts.py  se_agent_prompts.py  solution_owner_prompts.py
src/rules/: fastapi_rules.md  nodejs_rules.md  react_rules.md  spring_boot_rules.md
src/scripts/: se_agent.sh
src/services/: github_service.py
src/tools/: __init__.py  cli_tools.py  final_answer_tools.py  resolver_tools.py  spawn_container.py
src/utils/: graph_utils.py
src/workflow/: graph.py
test/: allocate_test.py  resolve_test.py  solution_owner_test.py
(+1 files in other folders)
